Feat: Reacforing the frontend extension for design patterns rules

--- a/extension-en/index.html
+++ b/extension-en/index.html
@@ -84,6 +84,6 @@
         <span id="toast-message">Action completed!</span>
     </div>
 
-    <script src="js/popup_handler.js"></script>
+    <script type="module" src="src/Popup/popup_handler.js"></script>
 </body>
 </html>
