--- a/extension-en/index.html
+++ b/extension-en/index.html
@@ -11,6 +11,32 @@
 </head>
 <body>
 
+    <!-- Auth Screen (hidden when logged in) -->
+    <div id="auth-screen" class="auth-container" style="display: none;">
+        <div class="auth-content">
+            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="auth-icon">
+                <path d="m5 8 6 6 6-6"/>
+            </svg>
+            <h2 class="auth-title">English Collector</h2>
+            <p class="auth-subtitle">Faça login para sincronizar suas frases</p>
+
+            <div id="auth-form" class="auth-form">
+                <input type="email" id="auth-email" placeholder="Email" class="auth-input" />
+                <input type="password" id="auth-password" placeholder="Senha" class="auth-input" />
+                <button id="btn-login-submit" class="btn-primary auth-btn">Entrar</button>
+                <p id="auth-error" class="auth-error" style="display: none;"></p>
+            </div>
+
+            <div class="auth-divider">
+                <span>ou</span>
+            </div>
+
+            <button id="btn-login-page" class="auth-link-btn">
+                Abrir página de login
+            </button>
+        </div>
+    </div>
+
     <nav>
         <div class="brand">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="color: var(--accent-color);"><path d="m5 8 6 6 6-6"/></svg>
@@ -102,6 +128,98 @@
         #toast.show { transform: translateX(-50%) translateY(0); opacity: 1; }
         #toast.error { background: var(--error-color); }
         #toast.info { background: var(--accent-color); }
+
+        /* Auth Screen */
+        .auth-container {
+            position: fixed;
+            inset: 0;
+            background: var(--bg-main);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 100;
+        }
+        .auth-content {
+            text-align: center;
+            padding: 2rem;
+            width: 100%;
+        }
+        .auth-icon {
+            color: var(--accent-color);
+            margin-bottom: 1rem;
+        }
+        .auth-title {
+            font-size: 1.25rem;
+            font-weight: 700;
+            margin: 0 0 0.5rem;
+            color: var(--text-primary);
+        }
+        .auth-subtitle {
+            font-size: 0.8125rem;
+            color: var(--text-secondary);
+            margin: 0 0 1.5rem;
+        }
+        .auth-form {
+            display: flex;
+            flex-direction: column;
+            gap: 0.75rem;
+        }
+        .auth-input {
+            width: 100%;
+            padding: 0.625rem 0.75rem;
+            border-radius: 0.5rem;
+            border: 1px solid var(--border-color);
+            background: var(--bg-secondary);
+            color: var(--text-primary);
+            font-size: 0.875rem;
+            font-family: 'Inter', sans-serif;
+            outline: none;
+            transition: border-color 0.2s;
+        }
+        .auth-input:focus {
+            border-color: var(--accent-color);
+        }
+        .auth-btn {
+            width: 100%;
+            justify-content: center;
+            padding: 0.625rem;
+        }
+        .auth-error {
+            font-size: 0.75rem;
+            color: var(--error-color);
+            margin: 0;
+        }
+        .auth-divider {
+            display: flex;
+            align-items: center;
+            margin: 1.25rem 0;
+            gap: 0.75rem;
+        }
+        .auth-divider::before, .auth-divider::after {
+            content: '';
+            flex: 1;
+            height: 1px;
+            background: var(--border-color);
+        }
+        .auth-divider span {
+            font-size: 0.6875rem;
+            color: var(--text-secondary);
+        }
+        .auth-link-btn {
+            background: none;
+            border: 1px solid var(--border-color);
+            color: var(--accent-hover);
+            font-size: 0.8125rem;
+            padding: 0.5rem 1rem;
+            border-radius: 0.5rem;
+            cursor: pointer;
+            transition: all 0.2s;
+            width: 100%;
+        }
+        .auth-link-btn:hover {
+            background: rgba(99, 102, 241, 0.1);
+            border-color: var(--accent-color);
+        }
     </style>
 
     <script type="module" src="src/Popup/popup_handler.js"></script>
